# SentientFollowAI

./: .env.example  .gitignore  CAMERA_QUALITY_GUIDE.md  LICENSE  QUICK_START.md  README.md  export_person_only_224_int8.py  export_yolo_224_int8.py  requirements.txt
Log/: OrbbecSDK.log.txt
cam_depth/astra_cpp_driver/: CMakeLists.txt
cam_depth/astra_cpp_driver/src/: fast_exporter.cpp
models/: yolov5nu_int8.onnx
scripts/: setup.ps1  setup.sh
src/: astra_camera.py  bytetrack_tracker.py  config.py  decision_maker.py  main.py  person_detector.py  person_detector_ultra_optimized.py  person_detector_with_tracking.py
src/Log/: OrbbecSDK.log.txt
tools/: camera_quality_checker.py  export_to_onnx.py  optimized_nms.py  prune_yolo_classes.py  quantize_model.py  test_pruned_model.py
